# task-202009

./: .gitmodules  CMakeLists.txt  README.md
outputs/: r2.csv
src/: r2.cpp
src/utils/: azure_wrapper.cpp  azure_wrapper.h  common_utils.h  deserialize.cpp  deserialize.h  structs.h  threadpool.cpp
